# tito-slack-reporter

./: .gitignore  README.md  pyproject.toml
.github/: tito-to-slack.yaml
.github/workflows/: tito-to-slack.yaml
tito_slack/: Test.ipynb  _version.py  tito_slack.py
